@@ -1,4 +1,7 @@
 5.1.4 -> 5.1.5:
+    - jbj: don't run empty transactions, avoiding obscure error msg.
+    - jbj: permit a negative index as alias for the last problem added to set.
+    - jbj: warn if package is not added because of platform affinity patterns.
     - proyvind: lzdio: fix build with recent api changes.
     - jbj: fix: initialize next element of rpmlog store correctly.
     - jbj: update {nl,id,pl}.po (Translation Project).
